syntax = "proto3";

package customer;

import "google/protobuf/empty.proto";

service CustomerService {
    rpc Create(CreateRequest) returns (google.protobuf.Empty) {}
}

message CreateRequest{
    string phone_number = 1;
    string name = 2;
    string email = 3;
    string photo = 4;
    string language = 5;
    string birthday = 6;
    string sex = 7;
}